--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@phun-ky/speccer",
-  "version": "4.0.0-0",
+  "version": "3.0.0",
   "description": "A script to show specifications on html elements in your styleguide",
   "main": "speccer.js",
   "publishConfig": {
