--- a/package.json
+++ b/package.json
@@ -29,31 +29,34 @@
   },
   "homepage": "https://github.com/phun-ky/speccer#readme",
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-async-to-generator": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/register": "^7.0.0",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-async-to-generator": "^7.8.3",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/register": "^7.9.0",
     "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.0.0-beta.0",
-    "css-loader": "^1.0.0",
-    "cssnano": "^4.1.0",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^1.0.1",
+    "cssnano": "^4.1.10",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-loader": "^2.0.0",
-    "mini-css-extract-plugin": "^0.4.2",
+    "eslint-loader": "^2.2.1",
+    "mini-css-extract-plugin": "^0.4.5",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.13.7",
-    "rimraf": "^2.6.2",
-    "style-loader": "^0.23.0",
+    "prettier": "^1.19.1",
+    "rimraf": "^2.7.1",
+    "style-loader": "^0.23.1",
     "stylint-loader": "^1.0.0",
-    "stylus": "^0.54.5",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "uglify-js": "^3.4.0",
+    "uglify-js": "^3.8.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.0.7"
+    "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "stylint": "^1.5.9"
   }
 }
