--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prettier": "^1.19.1",
     "rimraf": "^2.7.1",
     "style-loader": "^0.23.1",
+    "stylint": "^1.5.9",
     "stylint-loader": "^1.0.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
@@ -55,8 +56,5 @@
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
-  },
-  "dependencies": {
-    "stylint": "^1.5.9"
   }
 }
