--- a/.eslintrc
+++ b/.eslintrc
@@ -11,19 +11,24 @@
     "browser": true,
     "amd": true,
     "es6": true,
-    "node": true
+    "node": true,
+    "jest/globals": true
   },
+  "plugins": ["jest"],
   "rules": {
+    "comma-dangle": 1,
+    "quotes": [1, "single"],
     "no-undef": 2,
     "global-strict": 0,
+    "indent": [1, 2, { "SwitchCase": 1 }],
+    "no-extra-semi": 1,
     "no-underscore-dangle": 0,
     "no-console": 1,
     "no-unused-vars": 1,
+    "no-trailing-spaces": [1, { "skipBlankLines": true }],
     "no-unreachable": 1,
-    "no-alert": 0
+    "no-alert": 0,
+    "semi": 1
   },
-  "extends": [
-    "eslint:recommended",
-    "prettier"
-  ]
+  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"]
 }
