--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf ./dist && webpack --mode production",
+    "rollup": "rollup -c",
+    "clean": "rm -rf ./speccer.css ./speccer.min.css ./speccer.js",
+    "build": "npm run clean && npm run rollup && npm run stylus && npm run postcss",
+    "stylus": "rm -rf ./speccer.css && stylus ./src/index.styl -o ./speccer.css",
+    "postcss": "rm -rf ./speccer.min.css && postcss ./speccer.css -o  speccer.min.css",
+    "dev": "npm run clean && rollup -c -w",
     "commit": "npx git-cz"
   },
   "repository": {
@@ -29,32 +34,39 @@
   },
   "homepage": "https://github.com/phun-ky/speccer#readme",
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-async-to-generator": "^7.8.3",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/register": "^7.9.0",
-    "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^1.0.1",
-    "cssnano": "^4.1.10",
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-loader": "^2.2.1",
-    "mini-css-extract-plugin": "^0.4.5",
-    "postcss-loader": "^3.0.0",
-    "prettier": "^1.19.1",
-    "rimraf": "^2.7.1",
-    "style-loader": "^0.23.1",
-    "stylint": "^1.5.9",
-    "stylint-loader": "^1.0.0",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
-    "uglify-js": "^3.8.1",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-export-default-from": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.12.17",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/register": "^7.12.13",
+    "@babel/runtime": "^7.12.18",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@testing-library/dom": "^7.29.4",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/user-event": "^12.7.1",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "cssnano": "^5.0.4",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.1.5",
+    "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^26.6.3",
+    "postcss": "^8.3.0",
+    "postcss-cli": "^8.3.1",
+    "prettier": "^2.0.5",
+    "prettier-eslint": "^9.0.1",
+    "regenerator-runtime": "^0.13.7",
+    "rollup": "^2.39.0",
+    "rollup-plugin-terser": "^7.0.2"
+  },
+  "dependencies": {
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
