--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
   "plugins": ["jest"],
   "rules": {
     "comma-dangle": 1,
+    "arrow-parens": [2, "as-needed"],
     "quotes": [1, "single"],
     "no-undef": 2,
     "global-strict": 0,
