--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@phun-ky/speccer",
   "version": "4.0.0",
-  "description": "A script to show specifications on html elements in your styleguide",
+  "description": "A script to annotate, show spacing specs and to display typography information in documentation/website on HTML elements",
   "main": "speccer.js",
   "publishConfig": {
     "access": "public"
@@ -12,9 +12,10 @@
     "rollup:dev": "npm run clean && rollup -c -w",
     "clean": "rm -rf ./speccer.css ./speccer.min.css ./speccer.js",
     "build": "npm run clean && npm run rollup && npm run stylus && npm run postcss",
-    "stylus": "rm -rf ./speccer.css && stylus ./src/index.styl -o ./speccer.css",
+    "styles": "npm run stylus && npm run postcss",
+    "stylus": "rm -rf ./speccer.css && stylus ./src/styles/index.styl -o ./speccer.css",
     "postcss": "rm -rf ./speccer.min.css && postcss ./speccer.css -o  speccer.min.css",
-    "dev": "node ./scripts/watcher.js",
+    "dev": "node ./scripts/server.js",
     "commit": "npx git-cz"
   },
   "repository": {
@@ -26,7 +27,22 @@
     "css",
     "javascript",
     "spec",
-    "inspect"
+    "inspect",
+    "annotation",
+    "annotate",
+    "pin",
+    "specifications",
+    "anatomy",
+    "dissection",
+    "dissect",
+    "documentation",
+    "information",
+    "specification",
+    "specs",
+    "html-elements",
+    "inspect",
+    "spacing",
+    "speccer"
   ],
   "author": "Alexander Vassbotn Røyne-Helgesen <alexander@phun-ky.net>",
   "license": "MIT",
@@ -49,6 +65,7 @@
     "@testing-library/user-event": "^12.7.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
+    "browser-sync": "^2.27.7",
     "cssnano": "^5.0.4",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -64,12 +81,7 @@
     "regenerator-runtime": "^0.13.7",
     "rollup": "^2.39.0",
     "rollup-plugin-terser": "^7.0.2",
-    "async": "^3.2.0",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "node-watch": "^0.7.1",
-    "open": "^8.0.2",
-    "reload": "^3.1.1"
+    "stylus": "^0.56.0"
   },
   "dependencies": {
     "eslint-plugin-jsx-a11y": "^6.4.1",
