--- a/package.json
+++ b/package.json
@@ -130,9 +130,7 @@
     "regenerator-runtime": "^0.13.7",
     "rollup": "^2.39.0",
     "rollup-plugin-terser": "^7.0.2",
-    "stylus": "^0.56.0"
-  },
-  "dependencies": {
+    "stylus": "^0.56.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0"
