style: 💄 Update eslint configuration and plugins

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "parserOptions": {
-    "ecmaVersion": 6,
+    "ecmaVersion": 12,
     "sourceType": "module",
     "ecmaFeatures": {
       "classes": true
@@ -9,16 +9,68 @@
   "env": {
     "browser": true,
     "amd": true,
-    "es6": true,
+    "es2021": true,
     "node": true,
     "jest/globals": true
   },
   "plugins": ["jest"],
   "rules": {
     "comma-dangle": 1,
-    "arrow-parens": [2, "as-needed"],
     "quotes": [1, "single"],
     "no-undef": 2,
+    "prefer-const": "error",
+    "one-var": ["error", "never"],
+    "padded-blocks": ["error", "never"],
+    "padding-line-between-statements": [
+      "error",
+      { "blankLine": "always", "prev": "*", "next": "return" },
+      { "blankLine": "always", "prev": "*", "next": "export" },
+      { "blankLine": "always", "prev": "export", "next": "export" },
+      { "blankLine": "always", "prev": "export", "next": "*" },
+      { "blankLine": "always", "prev": "*", "next": "if" },
+      { "blankLine": "always", "prev": "if", "next": "*" },
+      { "blankLine": "always", "prev": "const", "next": "*" },
+      { "blankLine": "always", "prev": "*", "next": "const" },
+      { "blankLine": "always", "prev": "let", "next": "*" },
+      { "blankLine": "always", "prev": "*", "next": "let" },
+      { "blankLine": "always", "prev": "var", "next": "*" },
+      { "blankLine": "always", "prev": "*", "next": "var" },
+      {
+        "blankLine": "always",
+        "prev": "const",
+        "next": "let"
+      },
+      {
+        "blankLine": "never",
+        "prev": "const",
+        "next": "const"
+      },
+      {
+        "blankLine": "never",
+        "prev": "let",
+        "next": "let"
+      },
+      {
+        "blankLine": "never",
+        "prev": "var",
+        "next": "var"
+      },
+      {
+        "blankLine": "always",
+        "prev": "const",
+        "next": "let"
+      },
+      {
+        "blankLine": "always",
+        "prev": "const",
+        "next": "var"
+      },
+      {
+        "blankLine": "always",
+        "prev": "let",
+        "next": "var"
+      }
+    ],
     "global-strict": 0,
     "indent": [1, 2, { "SwitchCase": 1 }],
     "no-extra-semi": 1,
@@ -30,5 +82,5 @@
     "no-alert": 0,
     "semi": 1
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"]
+  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier", "plugin:compat/recommended"]
 }
