--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@phun-ky/speccer",
-  "version": "4.3.2",
+  "version": "5.0.0",
   "description": "A script to annotate, show spacing specs and to display typography information in documentation/website on HTML elements",
   "main": "speccer.js",
   "publishConfig": {
@@ -114,7 +114,7 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jest": "^24.4.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "postcss": "^8.3.0",
@@ -123,8 +123,6 @@
     "prettier-eslint": "^13.0.0",
     "rollup": "^2.39.0",
     "rollup-plugin-terser": "^7.0.2",
-    "stylus": "^0.56.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "stylus": "^0.56.0"
   }
 }
