--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module",
@@ -13,7 +14,7 @@
     "node": true,
     "jest/globals": true
   },
-  "plugins": ["jest"],
+  "plugins": ["jest", "@typescript-eslint"],
   "rules": {
     "comma-dangle": 1,
     "quotes": [1, "single"],
@@ -82,5 +83,12 @@
     "no-alert": 0,
     "semi": 1
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier", "plugin:compat/recommended"]
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "prettier",
+    "plugin:compat/recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
+  ]
 }
