--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "rollup": "rollup -c",
-    "rollup:dev": "npm run clean && rollup -c -w",
+    "prerollup:dev": "npm run clean && npm run stylus && npm run postcss ",
+    "rollup:dev": "rollup -c -w",
     "clean": "rm -rf dist/ dts/ ./speccer.css ./speccer.min.css ./speccer.js",
     "build": "npm run clean && npm run rollup && npm run stylus && npm run postcss",
     "styles": "npm run stylus && npm run postcss",
     "stylus": "rm -rf ./speccer.css && stylus ./src/styles/index.styl -o ./speccer.css",
     "postcss": "rm -rf ./speccer.min.css && postcss ./speccer.css -o  speccer.min.css",
-    "dev": "node ./scripts/server.js",
+    "dev": "npx browser-sync start --server --files \"dev/*.html\" --index \"dev/index.html\" --serveStatic \"/dev/*.html\"",
     "commit": "npx git-cz",
     "release": "npx standard-version"
   },
@@ -111,7 +112,8 @@
     "@testing-library/dom": "^7.29.4",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/user-event": "^12.7.1",
-    "browser-sync": "^2.27.7",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
     "cssnano": "^5.0.4",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -123,19 +125,17 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
+    "network-information-types": "^0.1.1",
     "postcss": "^8.3.0",
     "postcss-cli": "^8.3.1",
     "prettier": "^2.4.1",
     "prettier-eslint": "^13.0.0",
     "rollup": "^2.39.0",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "stylus": "^0.56.0",
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.1",
+    "stylus": "^0.56.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.4",
-    "network-information-types": "^0.1.0"
+    "typescript": "^4.5.4"
   }
 }
