--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "git-cz": "^4.9.0",
     "jest": "^26.6.3",
     "network-information-types": "^0.1.1",
     "postcss": "^8.3.0",
@@ -137,5 +138,10 @@
     "stylus": "^0.56.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/git-cz"
+    }
   }
 }
