--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "postcss": "rm -rf ./speccer.min.css && postcss ./speccer.css -o  speccer.min.css",
     "dev": "npx browser-sync start --server --files \"dev/*.html\" \"*.css\" --index \"dev/index.html\" --serveStatic \"/dev/*.html\"",
     "commit": "npx git-cz",
-    "release": "npx standard-version"
+    "release": "release-it"
   },
   "files": [
     "/speccer.js",
@@ -26,54 +26,6 @@
     "/speccer.min.css",
     "/speccer.css"
   ],
-  "standard-version": {
-    "scripts": {
-      "prerelease": "npm run build && git add .",
-      "posttag": "git push --follow-tags origin main"
-    },
-    "types": [
-      {
-        "type": "chore",
-        "section": "Tasks",
-        "hidden": true
-      },
-      {
-        "type": "docs",
-        "section": "Documentation"
-      },
-      {
-        "type": "feat",
-        "section": "Feature"
-      },
-      {
-        "type": "fix",
-        "section": "Bug"
-      },
-      {
-        "type": "perf",
-        "section": "Performance change"
-      },
-      {
-        "type": "refactor",
-        "section": "Refactoring"
-      },
-      {
-        "type": "release",
-        "section": "Create a release commit",
-        "hidden": true
-      },
-      {
-        "type": "style",
-        "section": "Markup, white-space, formatting, missing semi-colons...",
-        "hidden": true
-      },
-      {
-        "type": "test",
-        "section": "Adding missing tests",
-        "hidden": true
-      }
-    ]
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/phun-ky/speccer.git"
@@ -81,6 +33,8 @@
   "keywords": [
     "html",
     "css",
+    "design",
+    "design system",
     "javascript",
     "spec",
     "inspect",
@@ -107,6 +61,7 @@
   },
   "homepage": "https://github.com/phun-ky/speccer#readme",
   "devDependencies": {
+    "@release-it/conventional-changelog": "^7.0.1",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@testing-library/dom": "^7.29.4",
@@ -131,6 +86,7 @@
     "postcss-cli": "^8.3.1",
     "prettier": "^2.4.1",
     "prettier-eslint": "^13.0.0",
+    "release-it": "^16.1.5",
     "rollup": "^2.39.0",
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-terser": "^7.0.2",
