fix: 🐛 Make sure we publish to npm
✅ Closes: #45

--- a/.release-it.json
+++ b/.release-it.json
@@ -6,6 +6,9 @@
     "release": true,
     "tokenRef": "GH_TOKEN"
   },
+  "npm": {
+    "publish": true
+  },
   "plugins": {
     "@release-it/conventional-changelog": {
       "preset": {
