fix: 🐛 skipChecks for npm publish

--- a/.release-it.json
+++ b/.release-it.json
@@ -7,7 +7,8 @@
     "tokenRef": "GH_TOKEN"
   },
   "npm": {
-    "publish": true
+    "publish": true,
+    "skipChecks": true
   },
   "plugins": {
     "@release-it/conventional-changelog": {
