--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,8 @@ jobs:
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor}}@users.noreply.github.com"
           npm run release
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   notify:
     name: Notify failed build
     needs: publish
