fix: 🐛 Fix release

--- a/.release-it.json
+++ b/.release-it.json
@@ -10,6 +10,10 @@
     "publish": true,
     "skipChecks": true
   },
+  "hooks": {
+    "after:bump": "npm run build && npm run docs:gen",
+    "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
+  },
   "plugins": {
     "@release-it/conventional-changelog": {
       "preset": {
