chore: 🤖 Do not hide chores

--- a/.release-it.json
+++ b/.release-it.json
@@ -21,8 +21,7 @@
         "types": [
           {
             "type": "chore",
-            "section": "Tasks",
-            "hidden": true
+            "section": "Tasks"
           },
           {
             "type": "docs",
