fix: 🐛 Onlu publish on actual change

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,10 @@ on:
   pull_request:
     types: [closed]
     branches: [ "main" ]
+    paths:
+      - 'src/**'
+      - 'api/**'
+      - 'public/**'
   workflow_dispatch:
 jobs:
   publish:
