--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -30,8 +30,8 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  # This workflow contains a single job called "check"
+  check:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -51,5 +51,16 @@ jobs:
           npm i
       - name: Build # Build all packages
         run: npm run build
+      - name: Test
+        run: npm test
+  notify:
+    name: Notify failed check
+    needs: check
+    if: failure() && github.event.pull_request == null
+    runs-on: ubuntu-latest
+    steps:
+      - uses: jayqi/failed-build-issue-action@v1
+        with:
+          github-token: ${{ secrets.GH_TOKEN }}
 
 
