--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "access": "public"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "rollup": "rollup -c",
     "prerollup:dev": "npm run clean && npm run styles",
     "rollup:dev": "rollup -c -w",
@@ -72,6 +72,7 @@
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "cssnano": "^5.0.4",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -82,7 +83,8 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "git-cz": "^4.9.0",
-    "jest": "^26.6.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.7.0",
     "network-information-types": "^0.1.1",
     "postcss": "^8.3.0",
     "postcss-cli": "^8.3.1",
@@ -94,6 +96,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.35.0",
     "stylus": "^0.60.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "tslib": "^2.3.1",
     "typedoc": "^0.25.2",
     "typedoc-plugin-frontmatter": "^0.0.2",
