--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -3,13 +3,13 @@ on:
 - pull_request_target
 
 jobs:
-  triage:
+  labeler:
     permissions:
       contents: read
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/labeler@v4
-      with: 
+    - id: label-the-PR
+      uses: actions/labeler@v5
+      with:
         sync-labels: true
-        dot: true
