--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "@phun-ky/speccer",
   "version": "8.0.6",
   "description": "A script to annotate, show spacing specs and to display typography information in documentation/website on HTML elements",
-  "main": "speccer.js",
-  "types": "speccer.d.ts",
+  "main": "dist/speccer.js",
+  "module": "dist/speccer.esm.js",
+  "types": "dist/speccer.d.ts",
+  "type": "module",
   "publishConfig": {
     "access": "public"
   },
@@ -12,12 +14,12 @@
     "rollup": "rollup -c",
     "prerollup:dev": "npm run clean && npm run styles",
     "rollup:dev": "rollup -c -w",
-    "clean": "rm -rf dist/ dts/ ./speccer.css ./speccer.min.css ./speccer.js",
+    "clean": "rm -rf dist dts",
     "build": "npm run clean && npm run rollup && npm run styles",
     "styles": "npm run stylus && npm run postcss",
-    "stylus": "rm -rf ./speccer.css && stylus ./src/styles/index.styl -o ./speccer.css",
-    "postcss": "rm -rf ./speccer.min.css && postcss ./speccer.css -o  speccer.min.css",
-    "dev": "npx browser-sync start --server --files \"dev/*.html\" \"*.css\" --index \"dev/index.html\" --serveStatic \"/dev/*.html\"",
+    "stylus": "rm -rf ./dist/speccer.css && stylus ./src/styles/index.styl -o ./dist/speccer.css",
+    "postcss": "rm -rf ./dist/speccer.min.css && postcss ./dist/speccer.css -o  ./dist/speccer.min.css",
+    "dev": "npx browser-sync start --server --files \"dev/*.html\" \"dist/*.css\" --index \"dev/index.html\" --serveStatic \"/dev/*.html\"",
     "docs:gen": "node ./node_modules/.bin/typedoc --entryPoints src --entryPointStrategy expand --gitRevision main --githubPages false --plugin typedoc-plugin-markdown --tsconfig tsconfig.json --hideInPageTOC --out api --readme none",
     "style:lint": "./node_modules/.bin/eslint -c ./.eslintrc --max-warnings=0 src --ignore-path .gitignore ",
     "style:format": "prettier-eslint --config .prettierrc --eslint-config-path $PWD/.eslintrc --list-different --write \"./src/**/*.ts\"",
@@ -26,11 +28,13 @@
     "release": "release-it"
   },
   "files": [
-    "/speccer.js",
-    "/speccer.js.map",
-    "/speccer.min.css",
-    "/speccer.css",
-    "/speccer.d.ts"
+    "/dist/speccer.esm.js",
+    "/dist/speccer.esm.js.map",
+    "/dist/speccer.js",
+    "/dist/speccer.js.map",
+    "/dist/speccer.min.css",
+    "/dist/speccer.css",
+    "/dist/speccer.d.ts"
   ],
   "repository": {
     "type": "git",
