chore: 🤖 Add `.github` paths to check

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -8,6 +8,7 @@ on:
   push:
     branches: [ "main" ]
     paths:
+      - '.github'
       - 'src'
       - 'package.json'
       - 'package-lock.json'
@@ -18,6 +19,7 @@ on:
     branches: [ "main" ]
     types: [opened, synchronize] # Workflow triggering events
     paths:
+      - '.github'
       - 'src'
       - 'package.json'
       - 'package-lock.json'
