--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@testing-library/user-event": "^12.7.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.0.1",
+    "cobertura": "^1.0.1",
     "cssnano": "^5.0.4",
     "esbuild-jest": "^0.5.0",
     "eslint": "^8.56.0",
