--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Build # Build all packages
         run: npm run build
       - name: Test
-        run: npm test
+        run: npm run test-ci
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
