--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "access": "public"
   },
   "scripts": {
-    "test": "jest",
+    "test": "npx vitest --run --silent",
+    "beforetest-ci": "rm -rf coverage",
+    "test-ci": "npx vitest --run --coverage",
     "rollup": "rollup -c",
     "prerollup:dev": "npm run clean && npm run styles",
     "rollup:dev": "rollup -c -w",
@@ -74,23 +76,20 @@
     "@release-it/conventional-changelog": "^7.0.1",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "@testing-library/dom": "^7.29.4",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/user-event": "^12.7.1",
+    "@testing-library/jest-dom": "^6.4.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.0.1",
+    "@vitest/coverage-v8": "^1.3.0",
     "cobertura": "^1.0.1",
     "cssnano": "^5.0.4",
-    "esbuild-jest": "^0.5.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-compat": "^4.2.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vitest": "^0.3.22",
     "git-cz": "^4.9.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.7.0",
     "network-information-types": "^0.1.1",
     "postcss": "^8.3.0",
     "postcss-cli": "^8.3.1",
@@ -104,7 +103,6 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "stylus": "^0.62.0",
-    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tslib": "^2.3.1",
     "typedoc": "^0.25.2",
@@ -113,7 +111,8 @@
     "typedoc-plugin-mdn-links": "^3.0.3",
     "typedoc-plugin-no-inherit": "^1.4.0",
     "typedoc-plugin-rename-defaults": "^0.6.5",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "vitest": "^1.3.0"
   },
   "config": {
     "commitizen": {
