--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,17 +13,8 @@
     "noImplicitAny": false,
     "strictNullChecks": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": ["vitest/globals"]
   },
-  "exclude": [
-    "jest.config.ts",
-    "node_modules",
-    "build",
-    "dist",
-    "./speccer.js",
-    "scripts",
-    "tests",
-    "__tests__",
-    "dts"
-  ]
+  "exclude": ["node_modules", "build", "dist", "scripts", "dts"]
 }
