--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
   "homepage": "https://github.com/phun-ky/speccer#readme",
   "devDependencies": {
     "@release-it/conventional-changelog": "^7.0.1",
-    "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "@testing-library/jest-dom": "^6.4.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.0.1",
@@ -98,9 +98,8 @@
     "prettier-eslint-cli": "^8.0.1",
     "putout": "^35.1.0",
     "release-it": "^16.1.5",
-    "rollup": "^2.39.0",
-    "rollup-plugin-dts": "^4.0.1",
-    "rollup-plugin-terser": "^7.0.2",
+    "rollup": "^4.12.0",
+    "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "stylus": "^0.62.0",
     "ts-node": "^10.9.1",
@@ -111,7 +110,7 @@
     "typedoc-plugin-mdn-links": "^3.0.3",
     "typedoc-plugin-no-inherit": "^1.4.0",
     "typedoc-plugin-rename-defaults": "^0.6.5",
-    "typescript": "^4.5.4",
+    "typescript": "^5.3.3",
     "vitest": "^1.3.0"
   },
   "config": {
