--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,14 @@
     "noImplicitAny": false,
     "strictNullChecks": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "types": ["vitest/globals"]
+    "resolveJsonModule": true
   },
-  "exclude": ["node_modules", "build", "dist", "scripts", "dts"]
+  "exclude": [
+    "node_modules",
+    "build",
+    "dist",
+    "scripts",
+    "dts",
+    "vitest.config.ts"
+  ]
 }
