--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vitest": "^0.3.22",
     "git-cz": "^4.9.0",
-    "network-information-types": "^0.1.1",
+    "jsdom": "^24.0.0",
     "postcss": "^8.3.0",
     "postcss-cli": "^8.3.1",
     "prettier": "^3.2.5",
@@ -110,7 +110,7 @@
     "typedoc-plugin-mdn-links": "^3.0.3",
     "typedoc-plugin-no-inherit": "^1.4.0",
     "typedoc-plugin-rename-defaults": "^0.6.5",
-    "typescript": "^5.3.3",
+    "typescript": "^5.0.0",
     "vitest": "^1.3.0"
   },
   "config": {
