--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "noImplicitThis": true,
     "noImplicitAny": false,
     "strictNullChecks": true,
+    "skipLibCheck": true,
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
