--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -56,8 +56,8 @@ jobs:
       - name: Test
         run: npm run test-ci
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
-        env:
+        uses: codecov/codecov-action@v4.0.1
+        with:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: phun-ky/speccer
   notify:
