--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "prettier-eslint": "^16.3.0",
     "prettier-eslint-cli": "^8.0.1",
     "putout": "^35.1.0",
+    "quibble": "^0.9.1",
     "release-it": "^16.1.5",
     "rollup": "^4.12.0",
     "rollup-plugin-dts": "^6.1.0",
@@ -118,8 +119,5 @@
     "commitizen": {
       "path": "./node_modules/git-cz"
     }
-  },
-  "dependencies": {
-    "quibble": "^0.9.1"
   }
 }
