--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -61,7 +61,7 @@
 # Add '✨ feature' label to any PR where the head branch name starts with `feat` or has a `feat` section in the name
 '✨ feature':
   - head-branch: ['^feat', 'feat']
-'problems: bug':
+'problems: 🐛 bug':
   - head-branch: ['^fix', 'fix']
 'mindless: chore':
   - head-branch: ['^chore', 'chore']
